# unifi-doctor

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: PROTOCOL.md
src/unifi_doctor/: __init__.py  cli.py
src/unifi_doctor/analysis/: rf.py  roaming.py  rules.py  settings.py  streaming.py  throughput.py
src/unifi_doctor/api/: client.py  endpoints.py
src/unifi_doctor/models/: types.py
src/unifi_doctor/output/: dashboard.py  report.py  topology_output.py
src/unifi_doctor/topology/: interview.py  layout.py  renderer.py
tests/: conftest.py  test_analysis.py  test_analysis_edge_cases.py  test_interview.py  test_models.py  test_output.py  test_persistence.py  test_rules.py  test_snapshot.py  test_topology_json.py  test_topology_layout.py  test_topology_renderer.py
